--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
               <a><%= link_to("profile", edit_user_registration_path, class: "btn btn-primary outline") %></a>
               <a><%= link_to("log out", destroy_user_session_path, method: :delete, class: "btn btn-primary outline") %></a>
             <% else %>
+              <a><%= link_to("log in", new_user_session_path, class: "btn btn-primary outline") %></a>
               <a><%= link_to("premium", new_user_registration_path, class: "btn btn-primary outline") %></a>
             <% end %>
           </p>
