--- a/app/views/pages/premium.html.erb
+++ b/app/views/pages/premium.html.erb
@@ -1,91 +1,75 @@
-
-        <div class="container container-blank">
-          <h1> Blog template </h1></br>
-            <h3></h3>
-            <h4><a href='https://rubygems.org/gems/devise/versions/3.5.1' target= '_blank'>gem 'devise'</a></h4>
-            <h4><a href='https://github.com/plataformatec/devise' target= '_blank'>github documentation</a></h4>
-            <pre class='textarea'>
-              <code>
-                $ rails generate devise:install
-                $ rails generate devise User
-                $ rails g devise:views
-                $ rake db:migrate
-                $ rake routes | grep user
-                $ bundle install
-                $ bundle update
-                $ rails server
-              </code>
-            </pre>
-            <h3></h3>
-            <p>Update the navbar routes (example)</p> <p>To find the app routes ---- $ rake routes | grep user </p>
-            <pre class='textarea'>
-              <code>
-                $ rails generate controller StaticPages home blog about contact
-              </code>
-            </pre>
-            <h3></h3>
-            <p>Updates routes.rb file</p>
-              <ul class='list-unstyled unstyled'>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/config/routes.rb' target='_blank'>routes.rb</a></li>
-              </ul>
-            <p>Copy the html files from the github template or make your own.</p>
-              <ul class='list-unstyled unstyled'>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/pages/home.html.erb' target='_blank'>home.html.erb</a></li>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/pages/blog.html.erb' target='_blank'>blog.html.erb</a></li>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/pages/about.html.erb' target='_blank'>about.html.erb</a></li>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/pages/contact.html.erb' target='_blank'>contact.html.erb</a></li>
-              </ul>
-            <p>Create shim files for layouts/application.html.erb page.</p>
-              <ul class='list-unstyled unstyled'>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/layouts/_shim.html.erb' target='_blank'>_shim.html.erb</a></li>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/layouts/_header.html.erb' target='_blank'>_header.html.erb</a></li>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/layouts/_footer.html.erb' target='_blank'>_footer.html.erb</a></li>
-              </ul>
-            <p>Copy layouts/application.html.erb html file.</p>
-              <ul class='list-unstyled unstyled'>
-                <li><a href='https://github.com/Nalipp/blog_tutorial/blob/master/app/views/layouts/application.html.erb' target='_blank'>application.html.erb</a></li>
-              </ul>
-              <h3></h3>
-            <p>Update gemfile to deploy to heroku</p>
-              <h4><a href='https://rubygems.org/gems/rails_12factor/versions/0.0.3' target= '_blank'>gem 'rails_12factor'</a></h4>
-              <h4><a href='http://www.rubydoc.info/gems/rails_12factor/0.0.3' target= '_blank'>github documentation</a></h4>
-              <h4><a href='https://rubygems.org/gems/pg/versions/0.18.2' target= '_blank'>gem 'pg'</a></h4>
-              <h4><a href='http://www.rubydoc.info/gems/rails_12factor/0.0.3' target= '_blank'>github documentation</a></h4>
-            <h3></h3>
-              <pre class='textarea'>
-                <code>
-                  group :production do
-                    gem 'pg'
-                    gem 'rails_12factor'
-                  end
-                </code>
-              </pre>
-              <h3></h3>
-              <p>move gem 'sqlite3' to development</p>
-              <pre class='textarea'>
-                <code>
-                  group :development, :test do
-                    gem 'sqlite3'
-                    gem 'byebug'
-                    gem 'web-console'
-                    gem 'spring'
-                  end
-                </code>
-              </pre>
-              <h3></h3>
+            <div class="container container-blank">
+              <h1>Devise</h1></br>
+                <h3></h3>
+                <h4><a href='https://rubygems.org/gems/devise/versions/3.5.1' target= '_blank'>gem 'devise'</a></h4>
+                <h4><a href='https://github.com/plataformatec/devise' target= '_blank'>github documentation</a></h4>
                 <pre class='textarea'>
                   <code>
-                    $ bundle install --without production
-                    $ git commit -a -m "update heroku"
-                    $ heroku login
-                    $ heroku keys:add
-                    $ heroku create
-                    $ git push heroku master
-                    $ heroku rename
+                    $ rails generate devise:install
+                    $ rails generate devise User
+                    $ rails g devise:views
+                    $ rake db:migrate
+                    $ rake routes | grep user
+                    $ bundle install
+                    $ bundle update
+                    $ rails server
                   </code>
                 </pre>
-              <h1>provide info for changing links</h1>
+                <h3></h3>
+                <h4>Update routes examples <a href='https://github.com/Nalipp/devise_template/blob/master/app/views/layouts/_header.html.erb' target='_blank'>(header)</a>
+                <a href='https://github.com/Nalipp/devise_template/blob/master/app/views/layouts/_footer.html.erb' target='_blank'>(footer)</a></h4>
+                <p>To find the app routes ---- $ rake routes | grep user </p>
+                <h3><h3>
+                  <h4>Update controller to limit user access <a href='https://github.com/Nalipp/devise_template/blob/master/app/controllers/application_controller.rb' target='_blank'>(example)</a></h4>
+                <pre class='textarea'>
+                  <code>
+                    before_action :authenticate_user!, except: [:home]
+                  </code>
+                </pre>
+                <h3></h3>
+              <h4>Add render 'layouts/messages' to <a href='https://github.com/Nalipp/devise_template/blob/master/app/views/layouts/application.html.erb' target='_blank'>application.html.erb</a> and create <a href='https://github.com/Nalipp/devise_template/blob/master/app/views/layouts/_messages.html.erb' target='_blank'>_messages.html.erb</a> helper class for flash messages.</h4>
+              <h4>Create <a href='https://github.com/Nalipp/devise_template/blob/master/app/helpers/devise_hellper.rb' target='_blank'>devise_helper.rb</a><h4>
+              <h4>Add javascript to <a href='https://github.com/Nalipp/devise_template/blob/master/app/assets/javascripts/pages.coffee' target='_blank'>pages.coffee</a></h4>
+              <h4>Update <a href='https://github.com/Nalipp/devise_template/blob/master/app/assets/stylesheets/application.css.scss' target='_blank'>application.css.scss</a></h4>
+              <pre class='textarea'>
+                <code>
+                  /*flash*/
+                  .alert-error {
+                      background-color: #f2dede;
+                      border-color: #eed3d7;
+                      color: #b94a48;
+                      text-align: left;
+                   }
+
+                  .alert-alert {
+                      background-color: #f2dede;
+                      border-color: #eed3d7;
+                      color: #b94a48;
+                      text-align: left;
+                   }
+
+                  .alert-success {
+                      background-color: #dff0d8;
+                      border-color: #d6e9c6;
+                      color: #468847;
+                      text-align: left;
+                   }
+
+                  .alert-notice {
+                      background-color: #dff0d8;
+                      border-color: #d6e9c6;
+                      color: #468847;
+                      text-align: left;
+                   }
+                </code>
+              </pre>
             </div>
+            <div class='container'>
+            <h3>To do</h3>
+            <h4>Add email conformation</h4>
+            <h4>Update form template</h4>
+            <h4>better messages that don't interfere with the page html</h4>
+          </div>
           </div>
         </div>
       </div>
