--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,17 @@
 <div class="jumbotron">
   <div class="container">
     <div class="row text-center">
+      <div class="col-md-12">
+        <div class="col-md-4"></div>
+        <div class="col-md-4"><%= image_tag("star.png") %></div>
+        <div class="col-md-4"></div>
+    </div>
   </div>
     <h1 class="text-center">Awesome Project</h1>
       <p class="text-center">Something awesome goes here</p>
   </div>
 </div>
+  <div class="container-fluid container-blank">
+    <h1 class='text-center'>Blank</h1>
+    <h4 class='text-center'>This is a blank container</h4>
+  </div>
